--- a/tech/.settings/org.eclipse.core.resources.prefs
+++ b/tech/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/main/java/python/meituan_Object_Based_Storage.py=utf-8
 encoding//src/main/java/python/visitbeijing.py=utf-8
+encoding//src/main/java/python/visitbeijing_job.py=utf-8
