--- a/tech/src/main/java/docker/default.conf
+++ b/tech/src/main/java/docker/default.conf
@@ -26,17 +26,13 @@ server {
         root    /usr/share/nginx/html/exam-frontend;
         try_files    $uri $uri/ /index.html;
     }
-}
 
-server {
-    listen    443 ssl;
-    server_name    exam-api.fanfei.tech;
-    ssl_certificate    exam-api.fanfei.tech.pem;
-    ssl_certificate_key    exam-api.fanfei.tech.key;
+    location /api/ {
+        proxy_buffer_size 128k;
+        proxy_buffers 32 32k;
+        proxy_busy_buffers_size 128k;
 
+        proxy_pass    http://jdk:8080/;
 
-    location / {
-        proxy_pass    http://jdk:8080;
     }
 }
-
