--- a/tech/src/main/java/docker/default.conf
+++ b/tech/src/main/java/docker/default.conf
@@ -1,6 +1,6 @@
 server {
     listen    80;
-    server_name    fanfei.tech www.fanfei.tech exam.fanfei.tech exam-api.fanfei.tech;
+    server_name    fanfei.tech www.fanfei.tech exam.fanfei.tech;
     return    301 https://$host$request_uri;
 }
 
