--- a/tech/src/main/java/docker/default.conf
+++ b/tech/src/main/java/docker/default.conf
@@ -12,7 +12,7 @@ server {
 
     location / {
         root    /usr/share/nginx/html;
-        index    index.html index.htm;
+        index    index.txt index.html index.htm;
     }
 }
 
